<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userViewModel"
            type="com.project.hucemoney.viewmodels.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.activities.RegisterActivity">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/non"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_shape_medium" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="20dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="back"
                    android:src="@drawable/baseline_back_white_24"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/logo_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2"
            app:srcCompat="@mipmap/icon_app" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUsername"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/username"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@drawable/selector_input_text_material"
                app:endIconMode="custom"
                app:hintTextColor="@drawable/selector_input_text_material">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:text="@={userViewModel.userRegisterRequest.username}"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/custom_cursor_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@drawable/selector_input_text_material"
                app:endIconMode="custom"
                app:hintTextColor="@drawable/selector_input_text_material">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="textEmailAddress"
                    android:text="@={userViewModel.userRegisterRequest.email}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/custom_cursor_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassword"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@drawable/selector_input_text_material"
                app:endIconDrawable="@drawable/custom_toggle_password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@drawable/selector_input_text_material">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={userViewModel.userRegisterRequest.password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/custom_cursor_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutConfirmPassword"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@drawable/selector_input_text_material"
                app:endIconDrawable="@drawable/custom_toggle_password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@drawable/selector_input_text_material">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={userViewModel.userRegisterRequest.confirmPassword}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/custom_cursor_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_primary"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent" />

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="Đã có tài khoản? Đăng nhập ngay"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>