<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="transactionViewModel"
            type="com.project.hucemoney.viewmodels.TransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.activities.EditTransactionActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_round_bottom_blue_bg"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageView
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="20dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="close"
                    android:src="@drawable/baseline_close_white_24"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Chỉnh sửa giao dịch"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayoutTransaction">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="Số tiền"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtAmount"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.9"
                        android:autofillHints=""
                        android:background="@drawable/edt_primary"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="13"
                        android:paddingHorizontal="6dp"
                        android:text="0"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/blue"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCurrency"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:text="@string/vi_currency"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/horizontalLine1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="1dp"
                android:background="@color/grey" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/edt_primary"
                android:drawableStart="@drawable/baseline_wallet_blue_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="Tên giao dịch"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:text="@={transactionViewModel.transactionEditRequest.name}"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtCategory"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edt_primary"
                android:clickable="true"
                android:drawableStart="@drawable/baseline_category_blue_24"
                android:drawableEnd="@drawable/baseline_next_grey_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:focusable="false"
                android:hint="Danh mục"
                android:inputType="none"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtAccount"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/edt_primary"
                android:clickable="true"
                android:drawableStart="@drawable/baseline_account_balance_blue_24"
                android:drawableEnd="@drawable/baseline_next_grey_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:focusable="false"
                android:hint="Tài khoản"
                android:inputType="none"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/edt_primary"
                android:clickable="true"
                android:cursorVisible="false"
                android:drawableStart="@drawable/baseline_date_blue_24"
                android:drawableEnd="@drawable/baseline_next_grey_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:focusable="false"
                android:hint="Thời gian"
                android:inputType="date"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/edt_primary"
                android:drawableStart="@drawable/baseline_sticky_note_blue_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="Ghi chú"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:text="@={transactionViewModel.transactionEditRequest.note}"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDelete"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_outline_danger"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_primary"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>